:bug: Fix OpenAPI incorrectly nulling NRT properties
